--- a/css/doctor/style.css
+++ b/css/doctor/style.css
@@ -27,7 +27,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 }
 
 .wrap {
-    max-width: 1145px;
+    max-width: 1500px;
     margin: 0 auto;
     padding: 0 10px;
 }
@@ -91,7 +91,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 }
 
 .top-menu__wrap {
-    max-width: 1230px;
+    max-width: 1500px;
     margin: 25px auto;
     display: flex;
     justify-content: space-between;
@@ -216,6 +216,13 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 .doctor-card__doctor_clinic-name {
     font-style: normal;
     font-weight: 400;
+    display: flex;
+    justify-content: space-between;
+}
+
+.doctor-card__doctor_clinic-name img {
+    width: 17px;
+    height: 12px;
 }
 
 .doctor-card__clinic-schedule {
@@ -237,13 +244,23 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     border-radius: 4px;
     width: 552px;
     height: 53px;
-    padding: 10px;
+    padding: 20px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+}
+
+.doctor-card__doctor-clinics img {
+    width: 15px;
+    height: 11px;
 }
 
 .doctor-card__doctor-clinics span {
     font-size: 20px;
+}
+
+.doctor-card__right {
+    width: 400px;
 }
 
 .doctor-card__doctor-date {
@@ -254,6 +271,12 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     border-radius: 4px;
     width: 352px;
     height: 58px;
+    padding: 0 15px;
+}
+
+.doctor-card__doctor-date img {
+    width: 10px;
+    height: 15px;
 }
 
 .doctor-card__doctor-date span {
@@ -270,6 +293,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     border-radius: 4px;
     width: 352px;
     height: 58px;
+    padding: 0 15px;
 }
 
 .doctor-card__clinic-active img {
@@ -297,6 +321,11 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     background: #FFF04B;
     border-radius: 4px;
     margin: 10px;
+}
+
+.free-time img {
+    width: 18px;
+    height: 12px;
 }
 
 
@@ -355,6 +384,11 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     text-align: center;
     color: #BCBCBC;
     text-decoration-line: none;
+}
+
+.pagination_link-back img {
+    width: 10px;
+    height: 15px;
 }
 
 .pagination_link-active {
@@ -504,18 +538,18 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 
 .last-review_wrap {
     height: 450px;
-    max-width: 1145px;
+    max-width: 1500px;
     margin: 0 auto;
     padding: 0 10px;
 }
 
 .last-review__doctor-card {
-    width: 379px;
-    height: 215px;
+    width: 400px;
+    height: 230px;
     background: #FFFFFF;
     border: 0.5px solid rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-    margin-right: 15px;
+    margin-right: 99px;
 }
 
 .last-review__doctor-card__photo img {
@@ -605,7 +639,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 
 
 .attention-for-patient {
-    margin: 40px 0;
+    margin: 40px 60px;
     width: 1156px;
     height: 79px;
     border: 1px solid #FF6472;
@@ -617,16 +651,17 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     padding: 10px 70px;
 }
 
-.alert-for-view {
+.attention-for-view {
     color: #FF6472;
+    margin-bottom: 5px;
 }
 
-.alert-for-view img {
+.attention-for-view img {
     width: 20px;
     color: red;
 }
 
-.alert-info {
+.attention-info {
     color: rgba(0, 0, 0, 0.7);
 }
 
@@ -637,10 +672,18 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     line-height: 24px;
     text-decoration-line: underline;
     color: rgba(0, 0, 0, 0.8);
+    margin-right: 10px;
+}
+
+.breadcrumbs img {
+    margin-right: 10px;
+    width: 15px;
+    height: 15px;
 }
 
 .breadcrumbs {
     margin-bottom: 30px;
+    align-items: center;
 }
 
 
@@ -672,7 +715,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     display: flex;
     flex-direction: column;
     min-height: 100%;
-    padding: 80px 300px;
+    padding: 80px 200px;
 }
 
 .footer__body {
