--- a/css/doctor/styles.css
+++ b/css/doctor/styles.css
@@ -27,7 +27,8 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 }
 
 .wrap {
-    max-width: 1500px;
+    width: 1270px;
+    max-width: 100%;
     margin: 0 auto;
     padding: 0 10px;
 }
@@ -60,7 +61,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     box-sizing: border-box;
     width: 117px;
     height: 42px;
-    margin-right: 17px;
+    margin: 10px;
     border: 1px solid #232323;
     border-radius: 22px;
     list-style-type: none;
@@ -80,7 +81,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     box-sizing: border-box;
     width: 117px;
     height: 42px;
-    margin-right: 17px;
+    margin: 10px;
     border: 1px solid #232323;
     border-radius: 22px;
     list-style-type: none;
@@ -91,7 +92,8 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 }
 
 .top-menu__wrap {
-    max-width: 1500px;
+    width: 1270px;
+    max-width: 100%;
     margin: 25px auto;
     display: flex;
     justify-content: space-between;
@@ -140,11 +142,9 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 
 .doctor-card__left {
     text-align: center;
-    margin-right: 30px;
 }
 
 .doctor-card__center {
-    margin-right: 30px;
 }
 
 .photo-doctor img {
@@ -411,10 +411,10 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 .service__body {
     height: 500px;
     width: 100%;
-    margin-left: 100px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    text-align: center;
 }
 
 .service__title {
@@ -534,22 +534,23 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 
 .last-review__doctors {
     display: flex;
+    justify-content: space-between;
 }
 
 .last-review_wrap {
     height: 450px;
-    max-width: 1500px;
+    width: 1270px;
+    max-width: 100%;
     margin: 0 auto;
     padding: 0 10px;
 }
 
 .last-review__doctor-card {
     width: 400px;
-    height: 230px;
+    height: 210px;
     background: #FFFFFF;
     border: 0.5px solid rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-    margin-right: 99px;
 }
 
 .last-review__doctor-card__photo img {
@@ -640,10 +641,11 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 
 .attention-for-patient {
     margin: 40px 60px;
-    width: 1156px;
     height: 79px;
+    display: flex;
     border: 1px solid #FF6472;
     border-radius: 4px;
+    justify-content: center;
 }
 
 .attention-container {
@@ -721,7 +723,8 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 .footer__body {
     width: 100%;
     display: flex;
-    padding: 80px calc(3% + 15px);
+    justify-content: space-between;
+    padding: 80px;
 }
 
 .footer__head {
@@ -758,22 +761,6 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 
 .linked-footer li {
     margin-bottom: 15px;
-}
-
-.footer__about-clinic {
-    width: 25%;
-}
-
-.footer__for-patient {
-    width: 25%;
-}
-
-.footer__reference {
-    width: 25%;
-}
-
-.footer__technical-info {
-    width: 25%;
 }
 
 .link-seti img {
@@ -847,4 +834,67 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 .footer__communication {
     display: flex;
     justify-content: space-between;
+}
+
+
+@media(max-width: 1200px) {
+    .last-review__doctors {
+        display: flex;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .last-review__doctor-card {
+        margin: 20px;
+    }
+
+    .last-review_wrap {
+        height: auto;
+        background: #F7EDDF;
+    }
+
+    .footer__container {
+        height: auto;
+        padding: 50px 50px;
+    }
+
+    .footer__body {
+        padding: 30px;
+    }
+
+    .attention-for-patient {
+        height: auto;
+    }
+}
+
+@media(max-width: 1100px) {
+    .doctor-card__doctor-clinics_active {
+        width: auto;
+        height: auto;
+    }
+
+    .doctor-card__doctor-clinics{
+        width: auto;
+        height: auto;
+    }
+
+    .doctor-card__doctor-date {
+        width: 320px;
+    }
+
+    .doctor-card__clinic-active {
+        width: 320px;
+    }
+}
+
+@media(max-width: 900px) {
+    .doctor-card__doctor-date {
+        width: 280px;
+    }
+
+    .doctor-card__clinic-active {
+        width: 280px;
+    }
+
 }
