--- a/css/clinic/styles.css
+++ b/css/clinic/styles.css
@@ -27,7 +27,8 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 }
 
 .wrap {
-    max-width: 1500px;
+    width: 1270px;
+    max-width: 100%;
     margin: 0 auto;
     padding: 0 10px;
 }
@@ -60,7 +61,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     box-sizing: border-box;
     width: 117px;
     height: 42px;
-    margin-right: 17px;
+    margin: 10px;
     border: 1px solid #232323;
     border-radius: 22px;
     list-style-type: none;
@@ -80,7 +81,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     box-sizing: border-box;
     width: 117px;
     height: 42px;
-    margin-right: 17px;
+    margin: 10px;
     border: 1px solid #232323;
     border-radius: 22px;
     list-style-type: none;
@@ -91,7 +92,8 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 }
 
 .top-menu__wrap {
-    max-width: 1500px;
+    width: 1270px;
+    max-width: 100%;
     margin: 25px auto;
     display: flex;
     justify-content: space-between;
@@ -280,7 +282,6 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: #000000;
 }
 
-
 .services {
     margin-bottom: 50px;
 }
@@ -288,10 +289,10 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 .service__body {
     height: 500px;
     width: 100%;
-    margin-left: 100px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    text-align: center;
 }
 
 .service__title {
@@ -462,14 +463,6 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: #000000;
 }
 
-.last-review__clinic-count-reviews {
-    margin-left: 80px;
-}
-
-.last-review__clinic {
-    margin: 10px 40px 0 0;
-}
-
 .review-clinic-text {
     margin: 60px;
 }
@@ -491,11 +484,22 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 
 .last-review__clinics {
     display: flex;
+    justify-content: space-between;
+}
+
+.last-review__clinic {
+    margin-top: 30px;
+}
+
+.last-review__clinic-top {
+    display: flex;
+    flex-direction: row-reverse;
 }
 
 .last-review_wrap {
     height: 450px;
-    max-width: 1500px;
+    width: 1270px;
+    max-width: 100%;
     margin: 0 auto;
     padding: 0 10px;
 }
@@ -506,7 +510,6 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     background: #FFFFFF;
     border: 0.5px solid rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-    margin-right: 99px;
 }
 
 .last-review__clinic-card__photo img {
@@ -604,13 +607,14 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     display: flex;
     flex-direction: column;
     min-height: 100%;
-    padding: 80px 200px;
+    padding: 80px 100px;
 }
 
 .footer__body {
     width: 100%;
     display: flex;
-    padding: 80px calc(3% + 15px);
+    justify-content: space-between;
+    padding: 80px;
 }
 
 .footer__head {
@@ -647,22 +651,6 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 
 .linked-footer li {
     margin-bottom: 15px;
-}
-
-.footer__about-clinic {
-    width: 25%;
-}
-
-.footer__for-patient {
-    width: 25%;
-}
-
-.footer__reference {
-    width: 25%;
-}
-
-.footer__technical-info {
-    width: 25%;
 }
 
 .link-seti img {
@@ -738,9 +726,46 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     justify-content: space-between;
 }
 
+@media(max-width: 1200px) {
+    .last-review__clinics {
+        display: flex;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .last-review__clinic-card {
+        margin: 20px;
+    }
+
+    .last-review_wrap {
+        height: auto;
+        background: #F7EDDF;
+    }
+
+    .footer__container {
+        height: auto;
+        padding: 50px 50px;
+    }
+
+    .footer__body {
+        padding: 30px;
+    }
+
+    .attention-for-patient {
+        height: auto;
+    }
+}
 
 
-
+@media(max-width: 800px) {
+    .footer__body {
+        display: flex;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+}
 
 
 
